[script] do abort cleanup oob, tweak resumption to look more at module presence than ctx state
some aborts will still require another run to cleanup before execution
can succeed again -- idk what I'm missing

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -97,7 +97,7 @@ input, button, select, textarea, dialog, .fakebutton {
         position: relative;
         &::after {
             position: absolute;
-            content: '💾︎';
+            content: '💾︎'; /* ⛘ https://codepoints.net/U+26D8 sdcard? */
             bottom: 0px;
             right: 0px;
             font-size: 0.75rem;
