--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -68,6 +68,14 @@ input, button, select, textarea, dialog, .fakebutton {
     min-width: 32px;
     /*max-width: 72px;*/
     padding: 0px 1px;
+
+    img {
+        height: 100%;
+        width: 100%;
+        position: relative;
+        top: -6px;
+        margin-bottom: -18px;
+    }
 }
 
 .pushbutton, button {
@@ -91,6 +99,16 @@ input, button, select, textarea, dialog, .fakebutton {
         &::after {
             position: absolute;
             content: '✨';
+            bottom: -1px;
+            right: -1px;
+            font-size: 0.85rem;
+        }
+    }
+    &.hint_snowflake_corner {
+        position: relative;
+        &::after {
+            position: absolute;
+            content: '❄️';
             bottom: -1px;
             right: -1px;
             font-size: 0.85rem;
@@ -247,7 +265,9 @@ textarea {
 }
 
 .execscript .as_source {
+    text-wrap: nowrap;
     min-height: 150px;
+    margin-bottom: 8px;
 }
 
 .fuzzysort_results_item {
@@ -294,7 +314,7 @@ textarea {
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     grid-template-areas:
-    'pausehacks pausehacks'
+    'pausehacks staminahacks'
     'camerahacks camerahacks'
     'hexdump hexdump'
     'memsearch quickdumps'
@@ -302,6 +322,7 @@ textarea {
 }
 .toolset_rightbar > .camerahacks { grid-area: camerahacks; }
 .toolset_rightbar > .pausehacks { grid-area: pausehacks; }
+.toolset_rightbar > .staminahacks { grid-area: staminahacks; }
 .toolset_rightbar > .hexdump { grid-area: hexdump; }
 .toolset_rightbar > .memsearch { grid-area: memsearch; }
 .toolset_rightbar > .quickdumps { grid-area: quickdumps; }
@@ -350,8 +371,8 @@ dialog {
     &> .content {
         min-width: 200px;
         min-height: 100px;
-        width: 600px;
-        height: 400px;
+        width: 900px;
+        height: 500px;
         resize: both;
         overflow: scroll;
         margin-top: 6px;
@@ -394,17 +415,6 @@ dialog {
 .toolset_actor_watcher > .actor_compass { grid-area: actor_compass; margin-bottom: 12px; }
 .toolset_actor_watcher > .savestate_slot_actions { grid-area: savestate_slot_actions; }
 .toolset_actor_watcher > .bumper_pushbuttons { grid-area: bumper_pushbuttons; }
-
-.toolset_actor_watcher .actor_selector_options .selectRecall {
-    img {
-        /* TODO extract for any image-backed pushbutton? */
-        height: 100%;
-        width: 100%;
-        position: relative;
-        top: -6px;
-        margin-bottom: -18px;
-    }
-}
 
 .toolset_actor_watcher .actor_toggles {
     margin-top: 8px;
